manifests/tsd/base/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tsdsystem-base
  labels:
    name: tsdsystem-base
