manifests/tsd/base/tsd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsdsystem-app
  labels:
    app: tsd
spec:
  selector:
    matchLabels:
      app: tsd
  template:
    metadata:
      labels:
        app: tsd
    spec:
      containers:
        - name: tsd-app
          image: ghcr.io/ingv-oe-dev/tsdsystem/tsdsystem-app:v1.7a
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: log-config-volume
              mountPath: /etc/apache2/conf-enabled/custom-log.conf
              subPath: custom-log.conf
          readinessProbe:
            httpGet:
              path: /tsdws/version
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /tsdws/version
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 3
      volumes:
        - name: log-config-volume
          configMap:
            name: apache-custom-log
