manifests/tsd/base/tsd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsdsystem-app-svc
  labels:
    app: tsd
spec:
  ports:
    - port: 80
  selector:
    app: tsd
  clusterIP: None
