manifests/tsd/base/tsd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tsd-ingress
  # namespace: tsdsystem
  labels:
    app: tsd
spec:
  rules:
    - host: tsdsystem.host.domain
      http:
        paths:
          - path: /tsdws
            pathType: Prefix
            backend:
              service:
                name: tsdsystem-app-svc
                port:
                  number: 80
          - path: /fdsnws
            pathType: Prefix
            backend:
              service:
                name: tsdsystem-app-svc
                port:
                  number: 80
          - path: /swagger/tsdsystem
            pathType: Prefix
            backend:
              service:
                name: tsdsystem-app-svc
                port:
                  number: 80
          - path: /swagger/fdsn
            pathType: Prefix
            backend:
              service:
                name: tsdsystem-app-svc
                port:
                  number: 80
          - path: /swagger-ui/dist
            pathType: Prefix
            backend:
              service:
                name: tsdsystem-app-svc
                port:
                  number: 80
